force-app/main/default/objects/Opportunity/fields/Load_Containment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Load_Containment_Revenue__c</fullName>
    <description>rollup of the revenue from Vendor Detail, where products are in Load Containment specialty</description>
    <label>Load Containment Revenue</label>
    <summarizedField>Vendor_Detail_Link__c.Vendor_Category_SubTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Detail_Link__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>STRETCH - BANDING, STRETCH FILM, STRETCH FILM-PRIVATE BRAND, STRETCH - HAND GRADE FILMS, STRETCH - MACHINE GRADE FILMS, STRETCH - NETTING</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Detail_Link__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>