force-app/main/default/objects/Opportunity/fields/Lost_Deal_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Lost_Deal_Reason_Other__c</fullName>
    <inlineHelpText>Further details or explanation regarding a lost deal</inlineHelpText>
    <label>Lost Deal Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>