force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact - Left Company</fullName>
            </value>
            <value>
                <fullName>Contact - Not Responsive</fullName>
            </value>
            <value>
                <fullName>Customer - Bad Timing, Will Revisit</fullName>
            </value>
            <value>
                <fullName>Customer - Credit Issues</fullName>
            </value>
            <value>
                <fullName>Customer - Location Closed</fullName>
            </value>
            <value>
                <fullName>Customer - Lost/Cancelled Project</fullName>
            </value>
            <value>
                <fullName>Customer - Under Existing Contract</fullName>
            </value>
            <value>
                <fullName>Lost to Competition - Bid</fullName>
            </value>
            <value>
                <fullName>Lost to Competition - Incumbent</fullName>
            </value>
            <value>
                <fullName>Lost to Competition - Other</fullName>
            </value>
            <value>
                <fullName>Lost to Competition - Vendor Took Direct</fullName>
            </value>
            <value>
                <fullName>Oppty - Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Oppty - Expired</fullName>
            </value>
            <value>
                <fullName>Oppty - Low Volume</fullName>
            </value>
            <value>
                <fullName>Oppty - Not Real</fullName>
            </value>
            <value>
                <fullName>Oppty - Transferred Between Reps</fullName>
            </value>
            <value>
                <fullName>Product - Quality</fullName>
            </value>
            <value>
                <fullName>Product - Unable to find Vendor</fullName>
            </value>
            <value>
                <fullName>VRTV - Non-competitive Cost/Price</fullName>
            </value>
            <value>
                <fullName>VRTV - Service Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>