force-app/main/default/objects/Opportunity/fields/LTL_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>LTL_Account_Manager__c</fullName>
    <label>LTL Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>