force-app/main/default/objects/Opportunity/fields/Marketing_Details_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Details_From_Lead__c</fullName>
    <label>Marketing Details from Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>