force-app/main/default/objects/Opportunity/fields/MAT_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>MAT_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>MAT Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>