force-app/main/default/objects/Opportunity/fields/Max_Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Stage_Number__c</fullName>
    <defaultValue>6</defaultValue>
    <description>Set by the FAP. This is the maximum stage that the opportunity can progress to due to the specific attachments that it has.</description>
    <label>Max Stage Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>