force-app/main/default/objects/Opportunity/fields/Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Usage__c</fullName>
    <label>Monthly Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>