force-app/main/default/objects/Opportunity/fields/Most_Recent_Project_History_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Project_History_ID__c</fullName>
    <description>This field will hold the most recent Proj Hist ID associated with the opportunity, updated via a workflow rule when a new Proj Hist record is created.  For use by WorkFront in finding the correct Proj Hist record to update</description>
    <label>Most Recent Project History ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>