force-app/main/default/objects/Opportunity/fields/Name_of_Additional_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Additional_Opportunity__c</fullName>
    <inlineHelpText>Complete this field when a deal is marked Lost because it is a duplicate. Provide the Sales Rep&apos;s name as well as the Opp name, when available.</inlineHelpText>
    <label>Name of Additional Opportunity</label>
    <type>TextArea</type>
</CustomField>