force-app/main/default/objects/Opportunity/fields/NIR_Exception__c.field-meta.xml
<CustomField>
    <fullName>NIR_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Design and Kitting teams can check this box and the opportunity can be closed without submitting an NIR request.  Only Design, Kitting, and system Admins have access to update this field.</description>
    <inlineHelpText>Check this box if this PDN opportunity does NOT require a New Item.</inlineHelpText>
    <label>NIR Exception</label>
    <type>Checkbox</type>
</CustomField>