force-app/main/default/objects/Opportunity/fields/NIR_Submitted__c.field-meta.xml
<CustomField>
    <fullName>NIR_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Validation Rule for Closed/Won - DO NOT REMOVE</description>
    <label>NIR Submitted</label>
    <type>Checkbox</type>
</CustomField>