force-app/main/default/objects/Opportunity/fields/Number_of_Account_Reassignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Account_Reassignments__c</fullName>
    <description>The Number of Account Reassignments Associated with the Account on this Opportunity</description>
    <inlineHelpText>The Number of Account Reassignments Associated with the Account on this Opportunity</inlineHelpText>
    <label>Number of Account Reassignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>