force-app/main/default/objects/Opportunity/fields/Number_of_Active_Complete_Design_Request__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Complete_Design_Request__c</fullName>
    <label>Number of Active/Complete Design Request</label>
    <summaryFilterItems>
        <field>Design_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Plan, Current, Complete, On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Design_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>