force-app/main/default/objects/Opportunity/fields/Number_of_Design_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Design_Requests__c</fullName>
    <label>Number of Design Requests</label>
    <summaryForeignKey>Design_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>