force-app/main/default/objects/Opportunity/fields/Number_of_Kits_per_40x48_pallettext_del__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kits_per_40x48_pallettext_del__c</fullName>
    <description>Kitting</description>
    <label>Number of Kits per 40x48 pallet</label>
    <type>TextArea</type>
</CustomField>