force-app/main/default/objects/Opportunity/fields/Opp_is_Owned_by_Parent_Acct_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_is_Owned_by_Parent_Acct_Owner__c</fullName>
    <description>This field will flag opportunities as owned by the Parent Account owner (Corporate Account Manager).  This will allow us to break out Opps owned by CAM from ones they don&apos;t own, but fall under the parent accounts they own.  Used in Corporate Account Dashboard)</description>
    <formula>IF( Account.Parent.OwnerId  =  OwnerId , &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp is Owned by Parent Acct Owner</label>
    <type>Text</type>
</CustomField>