force-app/main/default/objects/Opportunity/fields/Opportunity_Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approved_Status__c</fullName>
    <description>Created by BW 4.6.18 to identify when a PDN Opportunity has been approved or rejected</description>
    <label>Opportunity Approved Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>