force-app/main/default/objects/Opportunity/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Date Opportunity was closed in Salesforce.</description>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>