force-app/main/default/objects/Opportunity/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <description>Any changes to the picklist values should be coordinated with Brainshark administration and should also be made on the following objects - Vendor Detail, Account (prospect segment), Contact, Lead, Work Orders.</description>
    <label>Opportunity Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facility Solutions</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>