force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Choose whether the opportunity is an ongoing piece of new business, a one-time only purchase (such as equipment), or defending existing business</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Type_Picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Opportunity</fullName>
                <color>#33CC00</color>
                <label>New - Ongoing</label>
            </value>
            <value>
                <fullName>New Opportunity - One Time</fullName>
                <color>#CC66CC</color>
                <label>New - One Time</label>
            </value>
            <value>
                <fullName>Share - Ongoing</fullName>
            </value>
            <value>
                <fullName>Share - One Time</fullName>
            </value>
            <value>
                <fullName>Share &amp; Defend</fullName>
            </value>
            <value>
                <fullName>Defending Existing Business</fullName>
                <color>#3366FF</color>
                <label>Defend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>