force-app/main/default/objects/Opportunity/fields/OppRevisit_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OppRevisit_Task_Due_Date__c</fullName>
    <formula>Date_to_Revisit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppRevisit Task Due Date</label>
    <type>Date</type>
</CustomField>