force-app/main/default/objects/Opportunity/fields/Oppty_Age__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Age__c</fullName>
    <description>Original: CloseDate  -  (DATEVALUE(CreatedDate))</description>
    <formula>TODAY() -  (DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>