force-app/main/default/objects/Opportunity/fields/Oppty_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Record_Type__c</fullName>
    <description>Opportunity Record Type Name</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Record Type Name</inlineHelpText>
    <label>Oppty. Record Type</label>
    <type>Text</type>
</CustomField>