force-app/main/default/objects/Opportunity/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>IF(NOT(IsClosed), &quot;Active&quot;, IF(AND(IsClosed, IsWon), &quot;Won&quot;, IF(AND(IsClosed, NOT(IsWon)), &quot;Lost&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzOrder Status</label>
    <type>Text</type>
</CustomField>