force-app/main/default/objects/Opportunity/fields/Owner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone_Number__c</fullName>
    <label>Sales Rep Mobile Number</label>
    <type>Phone</type>
</CustomField>