force-app/main/default/objects/Opportunity/fields/Packaging_Equipment_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Equipment_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packaging Equipment Specialist</label>
    <type>Checkbox</type>
</CustomField>