force-app/main/default/objects/Opportunity/fields/Pain_Points_with_Current_CoPacker__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points_with_Current_CoPacker__c</fullName>
    <description>Kitting</description>
    <label>Pain Points with Current CoPacker</label>
    <type>TextArea</type>
</CustomField>