force-app/main/default/objects/Opportunity/fields/PDN_Sample_Requested__c.field-meta.xml
<CustomField>
    <fullName>PDN_Sample_Requested__c</fullName>
    <inlineHelpText>Check this box if a sample is requested, then fill in the shipping address and Fedex billing account</inlineHelpText>
    <label>PDN Sample Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Ground</fullName>
            </value>
            <value>
                <fullName>Yes - Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>