force-app/main/default/objects/Opportunity/fields/PDN_Submit_Counter__c.field-meta.xml
<CustomField>
    <fullName>PDN_Submit_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will count the number of times the opportunity is submitted for approval to the Design Network.  Used for reporting on the PDN Dashboard.</description>
    <label>PDN Submit Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>