force-app/main/default/objects/Opportunity/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <description>Planned completion date for Design projects</description>
    <label>Planned Completion Date</label>
    <type>Date</type>
</CustomField>