force-app/main/default/objects/Opportunity/fields/POD_Required__c.field-meta.xml
<CustomField>
    <fullName>POD_Required__c</fullName>
    <label>POD Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>