force-app/main/default/objects/Opportunity/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Portfolio</valueSetName>
    </valueSet>
</CustomField>