force-app/main/default/objects/Opportunity/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>