force-app/main/default/objects/Opportunity/fields/Primary_Sales_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Manager__c</fullName>
    <formula>Primary_Sales_Rep_Name__r.Reports_To__r.Name</formula>
    <label>Primary Sales Rep Manager</label>
    <type>Text</type>
</CustomField>