force-app/main/default/objects/Opportunity/fields/Print_Segment__c.field-meta.xml
<CustomField>
    <fullName>Print_Segment__c</fullName>
    <label>Print Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Publishing - Regional and Niche</fullName>
            </value>
            <value>
                <fullName>Publishing - National Newstand</fullName>
            </value>
            <value>
                <fullName>Publishing - Specialty and Trade</fullName>
            </value>
            <value>
                <fullName>Publishing - Books and Periodicals</fullName>
            </value>
            <value>
                <fullName>Corporate Directed Buy</fullName>
            </value>
            <value>
                <fullName>Retail - Inserts and Direct Mail</fullName>
            </value>
            <value>
                <fullName>Retail - Point of Sale (POS)</fullName>
            </value>
            <value>
                <fullName>Financial and Insurance</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>OOH</fullName>
            </value>
            <value>
                <fullName>Specialty and Converting</fullName>
            </value>
            <value>
                <fullName>Agency Purchased Print</fullName>
            </value>
            <value>
                <fullName>Non Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>