force-app/main/default/objects/Opportunity/fields/Prod_Category__c.field-meta.xml
<CustomField>
    <fullName>Prod_Category__c</fullName>
    <description>Any changes here should also be made on the following objects - Vendor Detail, Contact, Work Orders and Form Assembly Work Order.  It&apos;s a dependent picklist to Segment.  We have some Dashboards that filter on some values for Specialists, so changes need to be vetted against those dashboards.</description>
    <inlineHelpText>Choose one or more by holding the control button (ctrl, bottom left of your keyboard) down as you select multiple product categories</inlineHelpText>
    <label>Prod Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Opportunity_Segment__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>AEROSPACE</fullName>
            </value>
            <value>
                <fullName>AMENITIES</fullName>
            </value>
            <value>
                <fullName>AQUEOUS MEDIA</fullName>
            </value>
            <value>
                <fullName>AQUEOUS PRINTERS</fullName>
            </value>
            <value>
                <fullName>AUTODESK - PRODUCT</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - NEW</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - RENEWAL</fullName>
            </value>
            <value>
                <fullName>BAGS</fullName>
            </value>
            <value>
                <fullName>BINDERY</fullName>
            </value>
            <value>
                <fullName>BLANKETS</fullName>
            </value>
            <value>
                <fullName>BOND &amp; WRITING</fullName>
            </value>
            <value>
                <fullName>CAN LINERS</fullName>
            </value>
            <value>
                <fullName>CAN LINERS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CANNABIS PACKAGING</fullName>
            </value>
            <value>
                <fullName>CARBONLESS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CHIPBOARD</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - ROLLS</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED DOMESTIC - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED IMPORT - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED - ROLLS</fullName>
            </value>
            <value>
                <fullName>COLD CHAIN</fullName>
            </value>
            <value>
                <fullName>COMPUTER &amp; LAPTOP</fullName>
            </value>
            <value>
                <fullName>CORRUGATED</fullName>
            </value>
            <value>
                <fullName>CUSHIONING</fullName>
            </value>
            <value>
                <fullName>DESIGN</fullName>
            </value>
            <value>
                <fullName>DIGITAL PAPER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>