force-app/main/default/objects/Opportunity/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <inlineHelpText>Provide information if the closed/lost deal is pricing or product related - the detail will be shared with the appropriate teams.</inlineHelpText>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>