force-app/main/default/objects/Opportunity/fields/Project_Drawings_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Drawings_Link__c</fullName>
    <label>Project Drawings Link</label>
    <type>Url</type>
</CustomField>