force-app/main/default/objects/Opportunity/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Opportunities (Project Manager)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>