force-app/main/default/objects/Opportunity/fields/Project_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Project_Work_Required__c</fullName>
    <label>Project Work Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Drawings and Renderings</fullName>
            </value>
            <value>
                <fullName>Artwork - Customer Provided</fullName>
            </value>
            <value>
                <fullName>Environmental Impact Analysis</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Pallet Analysis/Configuration</fullName>
            </value>
            <value>
                <fullName>Prepare RFQ</fullName>
            </value>
            <value>
                <fullName>Prod. Drawing Release</fullName>
            </value>
            <value>
                <fullName>Samples (include ship to)</fullName>
            </value>
            <value>
                <fullName>Samples w/Graphics (include ship to)</fullName>
            </value>
            <value>
                <fullName>Spec Existing with RFQ</fullName>
            </value>
            <value>
                <fullName>Structural Design</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>