force-app/main/default/objects/Opportunity/fields/Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date__c</fullName>
    <description>Most recent date that proposal will be made to customer, updated by rep, required at lightning stage Propose</description>
    <inlineHelpText>The date you provided the proposal to the Account; if multiple proposals, enter the date for the most current.</inlineHelpText>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>