force-app/main/default/objects/Opportunity/fields/PSR_BDM_RVP_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_BDM_RVP_Email__c</fullName>
    <defaultValue>$User.BDM_RVP_Email__c</defaultValue>
    <label>Email - PSR BDM/RVP</label>
    <type>Email</type>
</CustomField>