force-app/main/default/objects/Opportunity/fields/PSR_GSM_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_GSM_Email__c</fullName>
    <defaultValue>$User.GSM_Email__c</defaultValue>
    <label>Email - PSR Level 2</label>
    <type>Email</type>
</CustomField>