force-app/main/default/objects/Opportunity/fields/PSR_Pres_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_Pres_Email__c</fullName>
    <defaultValue>$User.Pres_Email__c</defaultValue>
    <label>Email - PSR Sales Leader</label>
    <type>Email</type>
</CustomField>