force-app/main/default/objects/Opportunity/fields/PSR_TL_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_TL_Email__c</fullName>
    <defaultValue>$User.TL_Email__c</defaultValue>
    <label>Email - PSR TL</label>
    <type>Email</type>
</CustomField>