force-app/main/default/objects/Opportunity/fields/PSR_VP_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_VP_Email__c</fullName>
    <defaultValue>$User.Vice_President_Email__c</defaultValue>
    <label>Email - PSR Level 1</label>
    <type>Email</type>
</CustomField>