force-app/main/default/objects/Opportunity/fields/PSR_ZM_SM_Email__c.field-meta.xml
<CustomField>
    <fullName>PSR_ZM_SM_Email__c</fullName>
    <defaultValue>$User.ZM_SM_Email__c</defaultValue>
    <label>Email - PSR Level 3a</label>
    <type>Email</type>
</CustomField>