force-app/main/default/objects/Opportunity/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Kitting Team to check this box once the request is qualified.  They will then mark the opportunity as Approved in Approval History related list.</inlineHelpText>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>