force-app/main/default/objects/Opportunity/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>Determined by Probability/Stage.
0-39%: Cold (Stages 1-3)
40%-69%: Warm (Stages 3-5)
70%+: Hot (Stages 6-7)</inlineHelpText>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <color>#CC0000</color>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <color>#33CC00</color>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <color>#0B24BE</color>
                <label>Cold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>