force-app/main/default/objects/Opportunity/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <label>Stage Probability %</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>