force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central (IL)</fullName>
            </value>
            <value>
                <fullName>Northeast (NJ)</fullName>
            </value>
            <value>
                <fullName>Southeast (GA)</fullName>
            </value>
            <value>
                <fullName>West (AZ)</fullName>
            </value>
            <value>
                <fullName>Asia (Restricted)</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Vine</fullName>
            </value>
            <value>
                <fullName>AAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>