force-app/main/default/objects/Opportunity/fields/Request_Detail_from_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail_from_Sales_Rep__c</fullName>
    <defaultValue>&quot;Include the following: -- Design objective -- Deliverables required --  Material requirements -- Details about the product with wts &amp; dims -- If there is an existing drawing or product available --&quot;</defaultValue>
    <inlineHelpText>Please provide the details of your request for our design team. ALWAYS include the date of request and DO NOT delete previous request details.</inlineHelpText>
    <label>Details for Designer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>