force-app/main/default/objects/Opportunity/fields/Requires_Domestic_Manufactured_Product__c.field-meta.xml
<CustomField>
    <fullName>Requires_Domestic_Manufactured_Product__c</fullName>
    <label>Requires Domestic Manufactured Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>