force-app/main/default/objects/Opportunity/fields/RFQ_Submitted_to_Copacker__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Submitted_to_Copacker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Kitting Team to check this box once the RFQ is submitted to the CoPacker</inlineHelpText>
    <label>RFQ Submitted to CoPacker</label>
    <type>Checkbox</type>
</CustomField>